--- a/public/home.html
+++ b/public/home.html
@@ -40,7 +40,7 @@ font-family: 'Comme', sans-serif;
     }
     a:link {
         font-family: 'Comme', sans-serif;
-  color: white;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
