--- a/public/aboutme.html
+++ b/public/aboutme.html
@@ -40,7 +40,7 @@ background-color: black;
 }
 a:link {
 font-family: 'Comme', sans-serif;
-color: white;
+color: black;
 background-color: transparent;
 text-decoration: none;
 }
