--- a/public/skills.html
+++ b/public/skills.html
@@ -43,7 +43,7 @@ background-color: black;
 }
 a:link {
 font-family: 'Comme', sans-serif;
-color: white;
+color: black;
 background-color: transparent;
 text-decoration: none;
 }
