--- a/public/contact.html
+++ b/public/contact.html
@@ -44,7 +44,7 @@ background-color: black;
 }
 a:link {
 font-family: 'Comme', sans-serif;
-color: white;
+color: black;
 background-color: transparent;
 text-decoration: none;
 }
