--- a/public/contact.html
+++ b/public/contact.html
@@ -140,7 +140,7 @@ count = 0;
 b.onclick = function() {
   count += 1;
   if(count%3==0){
-    window.open("https://memekadai.files.wordpress.com/2020/05/ffd7c-vadivelu_random15_memekadai.blogspot.com_.jpg","_blank");
+    window.open("https://assets.telegraphindia.com/telegraph/2023/Jan/1672986231_rick-rolled.jpg","_blank");
   }
 }
 var r =document.getElementById("resume");
